# morning-reading-nametable

./: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.mjs
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Config.vue  ConfigGroupCard.vue  Nametable.vue
