[package]
name = "morning-reading-nametable"
version = "0.1.1"
description = "早读记载"
authors = ["AlexXuCN"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "morning_reading_nametable_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc.5", features = [] }
# tauri-plugin-fs = "2.0.0-rc"
tauri-plugin-clipboard-manager = "2.0.0-beta.0"
tauri-plugin-store = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"
